[package]
name = "harmony"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5", "v1_7"] }
async-channel = "2.3.1"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_12"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
glib-build-tools = "0.20.0"
